@@ -1,12 +1,12 @@
-defaults = { 'readingdelta': 10,
+defaults = { 'readingdelta': 2,
              'script_running': 'green',
              'kodi_connection': 'blue',
              'no_kodi_connection': 'red',
              'brightness_bar': 'yellow',
              'autodim': True,
-             'autodimdelta': 0.5,
-             'dark': 5,
-             'bright': 45,
+             'autodimdelta': 0.25,
+             'dark': 3,
+             'bright': 50,
              'fetchsuntime': '3:00',
              'specialtriggers': { 'dark': 'ScreenOff', 'bright': 'ScreenOn:200', 'dim': 'ScreenOn:100' },
              'timedtriggers': [], 
@@ -16,6 +16,7 @@ defaults = { 'readingdelta': 10,
              'i2c_port': 1,
              'bme280_address': 0x76,
              'bme280_sampling': 4,
+             'bme280_adjust': -1.5,
              'sensehat_adjust': True,
              'sensehat_factor': 8.199,
              'which_camera': 'ambient',
