@@ -29,7 +29,7 @@ class AmbientSensor:
     def LightLevel( self ):
         if self.BUS:
             data = self.BUS.read_i2c_block_data( self.ADDRESS, self.CMD, 2 )
-            return self._converttonumber( data )
+            return self._converttonumber( data ) + 1
         elif self.TESTMODE:
             return random.randint( 0, 65000 )
         return None
